--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "auto-changelog": "^2.4.0",
     "axios": "^1.3.3",
     "chai": "^4.3.7",
     "cross-env": "^7.0.3",
