chore(CI): change reviewers list;

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -72,11 +72,9 @@ jobs:
             release
             automated pr
           signoff: false
-          team-reviewers: |
-            owners
-            maintainers
-          #assignees: jasonsaayman
-          #reviewers: jasonsaayman
+          #team-reviewers: |
+          # owners
+          # maintainers
           draft: false
       - name: Show PR link
         if: ${{ steps.cpr.outputs.pull-request-url }}
