--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "axios-promise",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "Lightweight Promises/A+ compatible implementation with cancellation, sync mode, timeouts, coroutines and signals support",
   "main": "./lib/index.js",
   "type": "module",
   "scripts": {
     "test": "mocha ./test/specs",
+    "test:coverage": "c8 npm run test",
     "test:build:version": "node ./bin/check-build-version.js",
+    "coverage:report": "c8 report",
+    "coveralls": "c8 report --reporter=text-lcov | coveralls",
     "preversion": "gulp version",
     "version": "npm run build && git add dist && git add package.json",
     "build": "gulp clear && cross-env NODE_ENV=production rollup -c -m",
@@ -67,6 +70,7 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "auto-changelog": "^2.4.0",
     "axios": "^1.3.3",
+    "c8": "^7.13.0",
     "chai": "^4.3.7",
     "cross-env": "^7.0.3",
     "debug": "^4.3.4",
@@ -113,7 +117,7 @@
       }
     },
     "hooks": {
-      "before:init": "npm test",
+      "before:init": "npm run test:coverage",
       "after:bump": "gulp version --bump ${version} && npm run build && npm run test:build:version && git add ./dist && git add ./package-lock.json",
       "before:release": "npm run release:changelog:fix",
       "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
