--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,10 @@ on:
       - 'v**'
   workflow_dispatch:
 jobs:
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+     - run: echo {{ github.event.pull_request.head.label }}
   publish:
     if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged == true && github.event.pull_request.head.label == 'AxiosPromise:release')
     runs-on: ubuntu-latest
