--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^17.0.1",
     "string-replace-async": "^3.0.2",
     "typescript": "^4.8.4"
   },
